media player bugs

--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -17,6 +17,6 @@
 
     <string name="tryAgain_Button">Try Again</string>
 
-    <string name="onOffMusic">Toggle Sound</string>
+    <string name="onOffMusic">Toggle Music</string>
 
 </resources>
