Fix splash screen layout in landscape mode

--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="high_score_1">1. Score 1 - 8</string>
     <string name="high_score_2">2. Score 2 - 6</string>
     <string name="high_score_3">3. Score 3 - 4</string>
+    <string name="teamName">Team Goofy Goobers</string>
 
 </resources>
