--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -21,14 +21,18 @@
 
     <string name="HomeLogoDescription">Concentration. The Logo for the application displayed on the home scree.</string>
     <string name="tile_count">Tile count:</string>
-    <string name="high_score_1">1. Score 1 - 8</string>
-    <string name="high_score_2">2. Score 2 - 6</string>
-    <string name="high_score_3">3. Score 3 - 4</string>
+    <string name="high_score_1">1. Score 1 – 8</string>
+    <string name="high_score_2">2. Score 2 – 6</string>
+    <string name="high_score_3">3. Score 3 – 4</string>
     <string name="teamName">Team Goofy Goobers</string>
     <string name="back">Back</string>
     <string name="tile_count2">Tile count</string>
     <string name="card_back">Card back</string>
     <string name="card_background">Card background</string>
     <string name="reset">Reset</string>
+    <string name="no_high_scores">No high scores.</string>
+    <string name="high_score">%1d. %2sd</string>
+    <string name="score_label">Score: %1d</string>
+    <string name="tile_count_dialog">"      %1d tiles"</string>
 
 </resources>
