--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -34,6 +34,10 @@
     <string name="high_score">%1d. %2s</string>
     <string name="score_label">Score: %1d</string>
     <string name="tile_count_dialog">"      %1d tiles"</string>
+    <string name="plus_score">+ 2</string>
+    <string name="minus_score">- 1</string>
+    <string name="incorrect_pair_toast">Incorrect pair! Press the try again button to try again.</string>
+    <string name="you_won">"You won!"</string>
 
     <string name="highscoreTittle"> The Leaderboard </string>
 
