Change app launcher name

--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ConcentrationGameApp</string>
+    <string name="app_name">Concentration</string>
 
     <string name="home_Settings_Button">Settings</string>
 
